--- a/css/style.css
+++ b/css/style.css
@@ -518,7 +518,7 @@ main {
 .contact {
   text-align: center;
   position: relative;
-  background-image: url(/img/contact.jpg);
+  background-image: url(./img/contact.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
