--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -3,7 +3,7 @@
 .contact{
     text-align: center;
     position: relative;
-    background-image: url(/img/contact.jpg);
+    background-image: url(../img/contact.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
